# project_fastapi

./: .gitignore  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
